# golf-analys

./: CMakeLists.txt  README.md  golfAz.py  golf_analyzer.cpp  main.cpp  setup.sh
opencv/4.5.5_1/: INSTALL_RECEIPT.json
opencv/4.5.5_1/.brew/: opencv.rb
opencv/4.5.5_1/lib/: libopencv_alphamat.4.5.5.dylib  libopencv_aruco.4.5.5.dylib  libopencv_barcode.4.5.5.dylib  libopencv_bgsegm.4.5.5.dylib  libopencv_bioinspired.4.5.5.dylib  libopencv_calib3d.4.5.5.dylib  libopencv_ccalib.4.5.5.dylib  libopencv_core.4.5.5.dylib  libopencv_datasets.4.5.5.dylib  libopencv_dnn.4.5.5.dylib  libopencv_dnn_objdetect.4.5.5.dylib  libopencv_dnn_superres.4.5.5.dylib  libopencv_dpm.4.5.5.dylib  libopencv_face.4.5.5.dylib  libopencv_features2d.4.5.5.dylib  libopencv_flann.4.5.5.dylib  libopencv_freetype.4.5.5.dylib  libopencv_fuzzy.4.5.5.dylib  libopencv_hfs.4.5.5.dylib  libopencv_highgui.4.5.5.dylib  libopencv_img_hash.4.5.5.dylib  libopencv_imgcodecs.4.5.5.dylib  libopencv_imgproc.4.5.5.dylib  libopencv_intensity_transform.4.5.5.dylib  libopencv_line_descriptor.4.5.5.dylib  libopencv_mcc.4.5.5.dylib  libopencv_ml.4.5.5.dylib  libopencv_objdetect.4.5.5.dylib  libopencv_optflow.4.5.5.dylib  libopencv_phase_unwrapping.4.5.5.dylib  libopencv_photo.4.5.5.dylib  libopencv_plot.4.5.5.dylib  libopencv_quality.4.5.5.dylib  libopencv_rapid.4.5.5.dylib  libopencv_reg.4.5.5.dylib  libopencv_rgbd.4.5.5.dylib  libopencv_saliency.4.5.5.dylib  libopencv_sfm.4.5.5.dylib  libopencv_shape.4.5.5.dylib  libopencv_stereo.4.5.5.dylib  (+15 more)
src/: CMakeLists.txt  analyzer_menu.py  golf_analyzer.cpp
